@@ -22,7 +22,7 @@ matplotlib==3.0.3         # via imageai
 mouseinfo==0.0.4          # via pyautogui
 numpy==1.17.0             # via h5py, imageai, keras, keras-applications, keras-preprocessing, matplotlib, opencv-python, scipy, tensorboard, tensorflow
 opencv-python==4.1.0.25
-pillow==6.1.0             # via imageai, mouseinfo, pyautogui, pyscreeze, pytesseract
+pillow==6.1.0             # via imageai, mouseinfo, pyautogui, pyscreeze
 protobuf==3.9.1           # via tensorboard, tensorflow
 pyautogui==0.9.47
 pygetwindow==0.0.7        # via pyautogui
@@ -32,7 +32,6 @@ pyperclip==1.7.0          # via mouseinfo
 pyrect==0.1.4             # via pygetwindow
 pyscreenshot==0.5.1
 pyscreeze==0.1.22         # via pyautogui
-pytesseract==0.2.9
 python-dateutil==2.8.0    # via matplotlib
 python3-xlib==0.15        # via mouseinfo, pyautogui
 pytweening==1.0.3         # via pyautogui
@@ -43,10 +42,11 @@ tensorboard==1.14.0       # via tensorflow
 tensorflow-estimator==1.14.0  # via tensorflow
 tensorflow==1.14.0
 termcolor==1.1.0          # via tensorflow
+tesserocr==2.4.1
 werkzeug==0.15.5          # via tensorboard
 wheel==0.33.6             # via tensorboard, tensorflow
 wrapt==1.11.2             # via tensorflow
 xlib==0.21
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.1.0        # via kiwisolver, markdown, protobuf, tensorboard
+# setuptools==41.4.0        # via kiwisolver, markdown, protobuf, tensorboard
